--- a/MvvmLight/packages.config
+++ b/MvvmLight/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
+  <package id="HtmlRenderer.Core" version="1.5.0.5" targetFramework="net451" />
+  <package id="HtmlRenderer.WPF" version="1.5.0.6" targetFramework="net451" />
+  <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net451" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net451" />
 </packages>
