--- a/MvvmLight/packages.config
+++ b/MvvmLight/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="HtmlRenderer.Core" version="1.5.0.5" targetFramework="net451" />
   <package id="HtmlRenderer.WPF" version="1.5.0.6" targetFramework="net451" />
+  <package id="log4net" version="2.0.5" targetFramework="net451" />
   <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net451" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net451" />
 </packages>
